Fix Skill overlapping

--- a/public/modules/admin/css/style.css
+++ b/public/modules/admin/css/style.css
@@ -411,9 +411,14 @@ span.tags
     -moz-border-radius:8px;
     -webkit-border-radius:8px;  
     border-radius:8px;  
-}
-*/
+}*/
 
+fieldset {
+      border: 1px solid red;
+      border-radius: 10px;
+      width: 50%;
+      text-align: center;
+}
 /* Styles go here */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -656,7 +661,7 @@ a:hover { text-decoration: underline; }
 }
 
 .setting {
-  display: block;
+  display: inline-block;
   font-weight: normal;
   padding: 7px 3px;
   border-top: 1px solid #d6d1af;
